# naVPlayer

./: .gitignore  Cargo.toml  README.md  README_JP.md  build.rs
scripts/: associate_navplayer.ps1  unassociate_navplayer.ps1
src/: main.rs
src/app/: actions.rs  layout.rs  mod.rs  state.rs
src/domain/: mod.rs  playback.rs  settings.rs  video.rs
src/infra/: config.rs  file_dialog.rs  ipc.rs  logger.rs  mod.rs  recent.rs
src/player/: controller.rs  events.rs  mod.rs  mpv_player.rs  sync.rs
src/ui/: controls.rs  mod.rs  player_grid.rs  single_view.rs  toolbar.rs
src/util/: mod.rs  time.rs
