[package]
name = "navplayer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
dirs = "6"
eframe = "0.33"
egui = "0.33"
egui_glow = "0.33"
libloading = "0.8"
once_cell = "1"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
